<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/tabbar_wrap"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/bg_tabbar"
	android:elevation="3dp"
	android:outlineProvider="bounds"
	android:clipChildren="false">

	<org.joinmastodon.android.ui.views.TabBar
		android:id="@+id/tabbar"
		android:layout_width="match_parent"
		android:layout_height="56dp"
		tools:ignore="RtlHardcoded,RtlSymmetry">

		<FrameLayout
			android:id="@+id/tab_home"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:paddingHorizontal="4dp"
			android:contentDescription="@string/home_timeline">

			<org.joinmastodon.android.ui.views.ItshoverNavigationIconView
				android:layout_width="28dp"
				android:layout_height="28dp"
				android:layout_gravity="center"
				android:importantForAccessibility="no"
				android:duplicateParentState="true"
				app:iconType="home"
				app:iconTint="@color/tab_bar_icon"/>
		</FrameLayout>

		<FrameLayout
			android:id="@+id/tab_search"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:paddingHorizontal="4dp"
			android:contentDescription="@string/search_hint">

			<org.joinmastodon.android.ui.views.ItshoverNavigationIconView
				android:layout_width="28dp"
				android:layout_height="28dp"
				android:layout_gravity="center"
				android:importantForAccessibility="no"
				android:duplicateParentState="true"
				app:iconType="magnifier"
				app:iconTint="@color/tab_bar_icon"/>
		</FrameLayout>

		<FrameLayout
			android:id="@+id/tab_diaper"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:paddingHorizontal="4dp"
			android:contentDescription="@string/diaper">

			<org.joinmastodon.android.ui.views.ItshoverNavigationIconView
				android:layout_width="28dp"
				android:layout_height="28dp"
				android:layout_gravity="center"
				android:importantForAccessibility="no"
				android:duplicateParentState="true"
				app:iconType="star"
				app:iconTint="@color/tab_bar_icon"/>

			<TextView
				android:id="@+id/diaper_new_feature_badge"
				android:layout_width="wrap_content"
				android:layout_height="18dp"
				android:minWidth="18dp"
				android:layout_gravity="top|end"
				android:layout_marginTop="4dp"
				android:layout_marginEnd="1dp"
				android:paddingHorizontal="5dp"
				android:background="@drawable/bg_tabbar_badge"
				android:gravity="center"
				android:includeFontPadding="false"
				android:text="新功能"
				android:textAppearance="@style/m3_label_small"
				android:textColor="?colorM3OnPrimary"
				android:visibility="gone"
				tools:visibility="visible"/>
		</FrameLayout>

		<FrameLayout
			android:id="@+id/tab_friend_request"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:paddingHorizontal="4dp"
			android:contentDescription="@string/friend_request">

			<org.joinmastodon.android.ui.views.ItshoverNavigationIconView
				android:layout_width="28dp"
				android:layout_height="28dp"
				android:layout_gravity="center"
				android:importantForAccessibility="no"
				android:duplicateParentState="true"
				app:iconType="globe"
				app:iconTint="@color/tab_bar_icon"/>
		</FrameLayout>

		<FrameLayout
			android:id="@+id/tab_profile"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:paddingHorizontal="4dp"
			android:contentDescription="@string/my_profile">

			<ImageView
				android:id="@+id/tab_profile_ava"
				android:layout_width="28dp"
				android:layout_height="28dp"
				android:layout_gravity="center"
				android:scaleType="centerCrop"
				android:importantForAccessibility="no"
				android:src="@null"/>

			<TextView
				android:id="@+id/notifications_badge"
				android:layout_width="wrap_content"
				android:layout_height="16dp"
				android:layout_gravity="top|end"
				android:layout_marginTop="6dp"
				android:layout_marginEnd="4dp"
				android:background="@drawable/bg_tabbar_badge"
				android:textColor="?colorM3OnPrimary"
				android:gravity="center"
				android:includeFontPadding="false"
				android:textAppearance="@style/m3_label_small"
				android:minWidth="16dp"
				android:paddingHorizontal="4dp"
				tools:text="22"/>
		</FrameLayout>
	</org.joinmastodon.android.ui.views.TabBar>

</FrameLayout>
